# five_psalms_linux

./: README.md  meson.build
data/: builder.ui  five_psalms_linux.appdata.xml.in  five_psalms_linux.desktop.in
po/: POTFILES  bn.po  com.github.sirthomas.five_psalms_linux.pot
src/: Application.vala  meson.build
src/Widgets/: ApplicationWindow.vala
